(refactor) 完善第10期答案，修改第11-1期文件结构

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -38,19 +38,19 @@
 
 ### 1.2 要求与文件结构
 
-该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `A` 对应的目标是 `vl_a`，该项目的文件结构如下
+该项目中所有的 CMake 目标必须均以 `vl_` 开头，例如文件夹 `a` 对应的目标是 `vl_a`，该项目的文件结构如下
 
 ``` :collapsed-lines
 .
 ├── modules
-│   ├── A
+│   ├── a
 │   │   ├── include
 │   │   │   └── visionlib
 │   │   │       └── a.hpp
 │   │   └── src
 │   │       ├── a1.cpp
 │   │       └── a2.cpp
-│   ├── B
+│   ├── b
 │   │   ├── include
 │   │   │   └── visionlib
 │   │   │       └── b.hpp
@@ -59,13 +59,13 @@
 │   │       ├── b2.cpp
 │   │       ├── b3.cpp
 │   │       └── b4.cpp
-│   ├── C
+│   ├── c
 │   │   ├── include
 │   │   │   └── visionlib
 │   │   │       └── c.hpp
 │   │   └── src
 │   │       └── c.cpp
-│   └── D
+│   └── d
 │       ├── include
 │       │   └── visionlib
 │       │       └── d.hpp
@@ -93,10 +93,10 @@
 - `cmake/VisionLibModule.cmake` —— 项目的 CMake 函数库，主要涉及到目标的便捷创建
 - `cmake/templates/VisionLibConfig.cmake.in` —— 项目在 `find_package` 时需要的配置文件模板
 - `modules/CMakeLists.txt` —— 项目的模块列表
-- `modules/A/CMakeLists.txt` —— 模块 A 的 CMake 配置文件
-- `modules/B/CMakeLists.txt` —— 模块 B 的 CMake 配置文件
-- `modules/C/CMakeLists.txt` —— 模块 C 的 CMake 配置文件
-- `modules/D/CMakeLists.txt` —— 模块 D 的 CMake 配置文件
+- `modules/a/CMakeLists.txt` —— 模块 `a` 的 CMake 配置文件
+- `modules/b/CMakeLists.txt` —— 模块 `b` 的 CMake 配置文件
+- `modules/c/CMakeLists.txt` —— 模块 `c` 的 CMake 配置文件
+- `modules/d/CMakeLists.txt` —— 模块 `d` 的 CMake 配置文件
 - `samples/CMakeLists.txt` —— 示例程序的 CMake 配置文件
 
 共 10 个文件。
@@ -116,6 +116,8 @@ project(VisionLib)
 #   配置项目
 # ----------------------------------------------------------------------------
 set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD_REQUIRED ON)
+
 find_package(OpenCV 4 REQUIRED)
 option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
 
@@ -129,7 +131,7 @@ add_subdirectory(modules)
 add_subdirectory(samples)
 
 # ----------------------------------------------------------------------------
-#   导出、安装
+#   导出、安装配置
 # ----------------------------------------------------------------------------
 install(
   EXPORT VisionLibTargets
@@ -218,11 +220,7 @@ macro(vl_add_module _name)
     cmake_parse_arguments(VLMD "" "" "${multi_args}" ${ARGN})
     # 创建目标
     aux_source_directory(src target_src)
-    if(BUILD_SHARED_LIBS)
-      add_library(${module_name} SHARED ${target_src})
-    else()
-      add_library(${module_name} STATIC ${target_src})
-    endif()
+    add_library(${module_name} ${target_src})
     # 添加头文件搜索路径，可参考【09】生成器表达式
     target_include_directories(${module_name} PUBLIC
       $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -316,19 +314,19 @@ foreach(m ${modules})
 endforeach()
 
 # 简单起见，也可以直接写
-# add_subdirectory(A)
-# add_subdirectory(B)
-# add_subdirectory(C)
-# add_subdirectory(D)
+# add_subdirectory(a)
+# add_subdirectory(b)
+# add_subdirectory(c)
+# add_subdirectory(d)
 ```
 
-@tab `modules/A`
+@tab `modules/a`
 
 ```cmake
 vl_add_module(a)
 ```
 
-@tab `modules/B`
+@tab `modules/b`
 
 ```cmake
 vl_add_module(b
@@ -337,7 +335,7 @@ vl_add_module(b
 )
 ```
 
-@tab `modules/C`
+@tab `modules/c`
 
 ```cmake
 vl_add_module(c
@@ -346,7 +344,7 @@ vl_add_module(c
 )
 ```
 
-@tab `modules/D`
+@tab `modules/d`
 
 ```cmake
 vl_update_build(d OFF)
@@ -431,7 +429,7 @@ find_package_handle_standard_args(VisionLib
 
 ## 2. 外部依赖管理
 
-C/C++ 一个饱受诟病的话题就是包管理，一些现代的语言都具有比较完善的包管理工具，例如 Python 的 `pip`、Node.js 的 `npm` 和 `yarn`、Rust 的 `cargo` 等，而 C/C++ 由于平台原因，没有一个统一的包管理工具，导致了 C/C++ 项目的依赖管理非常困难。CMake 提供了 `FetchContent` 和 `ExternalProject` 模块，可以用于管理项目的外部依赖，相比于手动下载、编译、安装，`FetchContent` 和 `ExternalProject` 已经尽可能的简化了这个过程。
+C/C++ 一个饱受诟病的话题就是包管理，一些现代的语言都具有比较完善的包管理工具，例如 Python 的 `pip`、Node.js 的 `npm` 和 `yarn`、Rust 的 `cargo` 等，而 C/C++ 没有一个统一的、官方的包管理工具，导致了 C/C++ 项目的依赖管理非常困难。CMake 提供了 `FetchContent` 和 `ExternalProject` 模块，可以用于管理项目的外部依赖，相比于手动下载、编译、安装，`FetchContent` 和 `ExternalProject` 已经尽可能的简化了这个过程。
 
 `ExternalProject` 用于在构建过程中下载、配置、构建和安装外部项目。它通常用于处理大型的、独立的外部项目。而 `FetchContent` 用于在配置阶段下载和添加外部项目的源代码。它适用于需要将外部项目的源代码直接集成到主项目中的情况。后文将主要介绍 `FetchContent` 的使用，`ExternalProject` 的使用可以参考[官方文档](https://cmake.org/cmake/help/latest/module/ExternalProject.html)。
 
