(refactor) 调整第11-1期的项目要求

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -20,8 +20,8 @@
 1. 需要支持 C++17 标准；
 2. 强制依赖 OpenCV 4 及以上版本，并用到其中的 `core`、`imgproc`、`highgui` 模块，分别对应 `opencv_core`、`opencv_imgproc`、`opencv_highgui` 这 3 个 CMake 目标；
 3. 默认以静态库的形式构建 `visionlib`，但允许用户通过 CMake 选项设置构建为动态库；
-4. 库包含了 `vl_a`、`vl_b`、`vl_c` 和 `vl_d` 共 4 个模块，分别对应 `A`、`B`、`C` 和 `D` 4 个文件夹，其中 `vl_d` 模块默认==不==参与构建，其余模块均参与构建，但是允许用户通过 CMake 选项设置任一模块的构建；
-5. 项目包含了一个示例程序 `vl_demo`
+4. 库包含了 `vl_a`、`vl_b`、`vl_c` 和 `vl_d` 共 4 个模块，分别对应 `a`、`b`、`c` 和 `d` 4 个文件夹，均默认参与构建，但是允许用户通过 CMake 选项设置任一模块是否参与构建；
+5. 项目包含了一个示例程序 `vl_demo`，默认参与构建，允许用户通过 CMake 选项设置其是否参与构建；
 6. 这几个模块和示例程序之间存在依赖关系，使用 → 表示依赖关系，如 <img src="/images/cmake/11-normal-deps-example.png" alt="11-normal-deps-example" width="60" style="vertical-align: middle;"> 表示 `vl_c` 依赖 `vl_a`
    
    <center>
@@ -250,8 +250,8 @@ macro(vl_add_module _name)
       ARCHIVE DESTINATION ${VL_LIB_INSTALL_PATH}
     )
     set(VL_LIB_COMPONENTS ${VL_LIB_COMPONENTS} "${module_name}" CACHE INTERNAL "VisionLib components")
+    unset(module_name)
   endif()
-  unset(module_name)
 endmacro()
 
 # ----------------------------------------------------------------------------
@@ -270,28 +270,38 @@ endmacro()
 #     )
 # ----------------------------------------------------------------------------
 macro(vl_add_exe _name)
-  set(module_name vl_${_name})
-  set(multi_args SOURCES DEPENDS EXT_DEPENDS)
-  cmake_parse_arguments(VLMD "" "" "${multi_args}" ${ARGN})
-  if(NOT VLMD_SOURCES)
-    message(FATAL_ERROR "No sources provided for executable ${module_name}")
+  # 判断是否参与构建
+  if(NOT DEFINED BUILD_${_name}_INIT)
+    set(BUILD_${_name}_INIT ON)
   endif()
-  add_executable(${module_name} ${VLMD_SOURCES})
-  target_link_libraries(
-    ${module_name}
-    PRIVATE ${VLMD_EXT_DEPENDS}
-  )
-  foreach(m ${VLMD_DEPENDS})
+  option(BUILD_${_name}
+    "Include ${_name} module into the VisionLib build" ${BUILD_${_name}_INIT}
+  ) # create option to enable/disable this module
+  
+  if(BUILD_${_name})
+    set(module_name vl_${_name})
+    set(multi_args SOURCES DEPENDS EXT_DEPENDS)
+    cmake_parse_arguments(VLMD "" "" "${multi_args}" ${ARGN})
+    if(NOT VLMD_SOURCES)
+      message(FATAL_ERROR "No sources provided for executable ${module_name}")
+    endif()
+    add_executable(${module_name} ${VLMD_SOURCES})
     target_link_libraries(
       ${module_name}
-      PRIVATE vl_${m}
+      PRIVATE ${VLMD_EXT_DEPENDS}
     )
-  endforeach()
-  install(
-    TARGETS ${module_name}
-    RUNTIME DESTINATION bin
-  )
-  unset(module_name)
+    foreach(m ${VLMD_DEPENDS})
+      target_link_libraries(
+        ${module_name}
+        PRIVATE vl_${m}
+      )
+    endforeach()
+    install(
+      TARGETS ${module_name}
+      RUNTIME DESTINATION bin
+    )
+    unset(module_name)
+  endif()
 endmacro()
 ```
 
@@ -347,8 +357,6 @@ vl_add_module(c
 @tab `modules/d`
 
 ```cmake
-vl_update_build(d OFF)
-
 vl_add_module(d
   DEPENDS b c
 )
@@ -471,8 +479,8 @@ FetchContent_Declare(
   GIT_TAG        703bd9caab50b139428cea1aaff9974ebee5742e # release-1.10.0
 )
 
-# GIT_REPOSITORY  表示外部依赖项的 Git 仓库地址；
-# GIT_TAG         表示外部依赖项的 Git 仓库的标签，可以是分支名、标签名、提交哈希等，
+# GIT_REPOSITORY: 表示外部依赖项的 Git 仓库地址；
+# GIT_TAG:        表示外部依赖项的 Git 仓库的标签，可以是分支名、标签名、提交哈希等，
 #                 但建议是稳定的标签名防止不稳定的代码进入项目。
 ```
 
@@ -484,7 +492,7 @@ FetchContent_Declare(
   URL https://github.com/google/googletest/archive/main.zip
 )
 
-# URL             表示外部依赖项的 URL 地址。
+# URL: 表示外部依赖项的 URL 地址。
 ```
 
 :::
