(bugfix) 修改第11-1期Config.cmake文件的安装路径错误

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -140,9 +140,6 @@ install(
   # VL_CFG_INSTALL_PATH 定义于 VisionLibInstall.cmake 中
 )
 
-file(RELATIVE_PATH VL_INSTALL_RELATIVE_PATH 
-  "${CMAKE_INSTALL_PREFIX}/${VL_CFG_INSTALL_PATH}/" ${CMAKE_INSTALL_PREFIX})
-
 configure_file(
   cmake/templates/VisionLibConfig.cmake.in
   "${CMAKE_CURRENT_BINARY_DIR}/VisionLibConfig.cmake"
@@ -405,9 +402,7 @@ vl_add_exe(demo
 get_filename_component(VL_CONFIG_PATH
   "${CMAKE_CURRENT_LIST_FILE}" PATH
 )
-get_filename_component(ML_INSTALL_PATH
-  "${VL_CONFIG_PATH}/@VL_INSTALL_RELATIVE_PATH@" REALPATH
-)
+set(VL_INSTALL_PATH "@VL_INSTALL_PATH@")
 
 # ----------------------------------------------------------------------------
 #   设置头文件搜索路径变量
