(feature) 增加第11-1期的思考和答案

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -430,6 +430,37 @@ find_package_handle_standard_args(VisionLib
 
 :::
 
+### 1.5 思考 :thinking:
+
+用户在使用 VisionLib 中的 `vl_d` 目标的时候一般在项目中会写上
+
+```cmake
+add_executable(demo main.cpp)
+
+find_package(VisionLib REQUIRED)
+
+target_link_libraries(demo PRIVATE vl_d)
+```
+
+但是这时候编译会出现形如以下内容的报错
+
+```
+[ 50%] Building CXX object CMakeFiles/demo.dir/main.cpp.o
+In file included from /usr/local/include/VisionLib/visionlib/d.hpp:3,
+                 from /path/to/vl_deploy_demo/main.cpp:1:
+/usr/local/include/VisionLib/visionlib/c.hpp:5:10: fatal error: opencv2/core.hpp: No such file or directory
+    5 | #include <opencv2/core.hpp>
+      |          ^~~~~~~~~~~~~~~~~~
+compilation terminated.
+make[2]: *** [CMakeFiles/demo.dir/build.make:76：CMakeFiles/demo.dir/main.cpp.o] error 1
+make[1]: *** [CMakeFiles/Makefile2:83：CMakeFiles/demo.dir/all] error 2
+make: *** [Makefile:91：all] error 2
+```
+
+请分析出现该问题的原因以及解决方法。
+
+**答案** [【点此查看】](11/answer.md#_1-常规非跨平台项目)
+
 ## 2. 外部依赖管理
 
 C/C++ 一个饱受诟病的话题就是包管理，一些现代的语言都具有比较完善的包管理工具，例如 Python 的 `pip`、Node.js 的 `npm` 和 `yarn`、Rust 的 `cargo` 等，而 C/C++ 没有一个统一的、官方的包管理工具，导致了 C/C++ 项目的依赖管理非常困难。CMake 提供了 `FetchContent` 和 `ExternalProject` 模块，可以用于管理项目的外部依赖，相比于手动下载、编译、安装，`FetchContent` 和 `ExternalProject` 已经尽可能的简化了这个过程。
