(refactor) 修改第11-2期的Config.cmake文件

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -24,11 +24,11 @@
 5. 项目包含了一个示例程序 `vl_demo`，默认参与构建，允许用户通过 CMake 选项设置其是否参与构建；
 6. 这几个模块和示例程序之间存在依赖关系，使用 → 表示依赖关系，如 <img src="/images/cmake/11-normal-deps-example.png" alt="11-normal-deps-example" width="60" style="vertical-align: middle;"> 表示 `vl_c` 依赖 `vl_a`
    
-   <center>
+   ::: center
      <img src="/images/cmake/11-normal-deps.png" alt="11-normal-deps" width="500">
 
      **图 1-1：依赖关系图**
-   </center>
+   :::
 
 7. 项目的安装目录为 `/usr/local`，其中
    - 示例程序安装到 `/usr/local/bin`
@@ -119,7 +119,7 @@ set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 find_package(OpenCV 4 REQUIRED)
-option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
+option(BUILD_SHARED_LIBS "Build shared libraries?" OFF)
 
 include(cmake/VisionLibInstall.cmake)
 include(cmake/VisionLibModule.cmake)
@@ -573,7 +573,7 @@ FetchContent_MakeAvailable(projD projB projC)
 
 ### 2.2 预期目标
 
-现计划开发一个 Windows 平台下的 OPC UA 通信库 `opcua`，该库依赖于 `open62541`，`open62541` 是一个开源的 OPC UA 协议栈，提供了 OPC UA 服务端和客户端的 C 语言实现。`opcua` 库的开发需要实现以下功能：
+现计划开发一个 Windows 平台下的 OPC UA 通信库 `opcua`，该库依赖于 `open62541`[^1]，`open62541` 是一个开源的 OPC UA 协议栈，提供了 OPC UA 服务端和客户端的 C 语言实现。`opcua` 库的开发需要实现以下功能：
 
 1. 需要支持 C++17 标准；
 2. 强制依赖 `open62541`，没有该库需要自动下载、并添加至项目中，如果是自动下载的 `open62541`，那么 `opcua` 库在安装时需要将 `open62541` ==一并安装==；
@@ -625,47 +625,56 @@ FetchContent_MakeAvailable(projD projB projC)
 - `3rdparty/open62541/CMakeLists.txt` —— `open62541` 的配置文件
 - `CMakeLists.txt` —— 项目根目录的 CMake 配置文件
 - `cmake/opcuaInstall.cmake` —— 项目的安装路径配置文件
+- `cmake/opcuaConfig.cmake` —— 提供给用户在 `find_package` 时所需要的配置文件（因为整个项目只有一个目标，这里就不使用模板文件了）
 
-共 3 个文件，如下文件结构所示
+共 4 个文件，如下文件结构所示
 
 ```
 .
 ├── 3rdparty
-│   └── open62541
-│       └── CMakeLists.txt (New)
+│   └── open62541
+│       └── CMakeLists.txt (New)
 ├── CMakeLists.txt         (New)
 ├── cmake
+│   ├── opcuaConfig.cmake  (New)
 │   └── opcuaInstall.cmake (New)
 ├── include
-│   └── ...
+│   └── ...
 └── src
     └── ...
 ```
+
+#### 2.4.1 项目配置
 
 ::: code-tabs
 
 @tab CMakeLists.txt
 
 ```cmake :collapsed-lines
+# --------------------------------------------------------
+#  项目配置
+# --------------------------------------------------------
 cmake_minimum_required(VERSION 3.16)
-
 project(opcua)
 
 set(CMAKE_CXX_STANDARD 17)
+option(BUILD_SHARED_LIBS "Build shared libraries?" OFF)
 
 include(cmake/opcuaInstall.cmake)
 
+# --------------------------------------------------------
+#  外部依赖管理
+# --------------------------------------------------------
 find_package(open62541 QUIET)
 if(NOT open62541_FOUND)
   add_subdirectory(3rdparty/open62541)
 endif()
 
+# --------------------------------------------------------
+#  目标构建
+# --------------------------------------------------------
 aux_source_directory(src target_src)
-if(BUILD_SHARED_LIBS)
-  add_library(opcua SHARED ${target_src})
-else()
-  add_library(opcua STATIC ${target_src})
-endif()
+add_library(opcua ${target_src})
 
 target_include_directories(opcua PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -678,15 +687,29 @@ target_link_libraries(opcua
 
 install(
   TARGETS opcua
-  EXPORT opcuaModules
+  EXPORT opcuaTarget
   LIBRARY DESTINATION ${OPCUA_BIN_INSTALL_PATH}
   ARCHIVE DESTINATION ${OPCUA_LIB_INSTALL_PATH}
   RUNTIME DESTINATION ${OPCUA_BIN_INSTALL_PATH}
   INCLUDES DESTINATION ${OPCUA_INC_INSTALL_PATH}
 )
+
+# --------------------------------------------------------
+#  导出、安装
+# --------------------------------------------------------
+install(
+  EXPORT opcuaTarget
+  FILE opcuaTarget.cmake
+  DESTINATION ${OPCUA_CFG_INSTALL_PATH}
+)
+
+install(
+  FILES cmake/opcuaConfig.cmake
+  DESTINATION ${OPCUA_CFG_INSTALL_PATH}
+)
 ```
 
-@tab cmake/opcuaInstall.cmake
+@tab opcuaInstall.cmake
 
 ```cmake
 set(CMAKE_INSTALL_PREFIX "D:/opcua")
@@ -697,6 +720,12 @@ set(OPCUA_BIN_INSTALL_PATH "x64/vc16/bin")
 # 理论上这个路径要根据 MSVC 版本和系统架构来确定，这里只是举例，就不做额外判断了
 set(OPCUA_CFG_INSTALL_PATH "${OPCUA_LIB_INSTALL_PATH}")
 ```
+
+:::
+
+#### 2.4.2 外部依赖配置
+
+::: code-tabs
 
 @tab 3rdparty/open62541/CMakeLists.txt
 
@@ -710,6 +739,36 @@ FetchContent_Declare(
 )
 
 FetchContent_MakeAvailable(open62541)
+```
+
+:::
+
+#### 2.4.4 opcuaConfig.cmake 配置
+
+由于 `opcua` 项目只有一个目标，因此 `opcuaConfig.cmake` 文件非常简单，方便起见也不需要向用户提供诸如 `opcua_INCLUDE_DIRS` 和 `opcua_LIBS` 这样的集合变量，因此 `opcuaConfig.cmake` 只需要完成以下功能即可
+
+- 提供 CMake 目标变量（导入 `opcua` 目标）
+- 提供 `find_package` 搜索的结果和状态
+
+::: code-tabs
+
+@tab opcuaConfig.cmake
+
+```cmake
+# ----------------------------------------------------------------------------
+#  opcua CMake 配置文件
+#
+#  基本用法：
+#    find_package(opcua REQUIRED)
+#    target_link_libraries(your_target PRIVATE opcua)
+# ----------------------------------------------------------------------------
+
+if(NOT TARGET opcua)
+  include(${CMAKE_CURRENT_LIST_DIR}/opcuaTarget.cmake)
+endif()
+
+include(FindPackageHandleStandardArgs)
+find_package_handle_standard_args(opcua)
 ```
 
 :::
@@ -1435,3 +1494,5 @@ add_library(opt_obj INTERFACE IMPORTED)
 - 跨平台
 
 对应的 CMake 配置，都能在 RMVL 项目中找到。
+
+[^1]: open62541 developers. [open62541](https://github.com/open62541/open62541.git), September 2014.
