--- a/docs/tutorial/git/02.md
+++ b/docs/tutorial/git/02.md
@@ -16,23 +16,23 @@ git push origin master         # 推送至远程库
 
 效果如下
 
-<center>
+::: center
 
 ![pr-1-1](/images/git/pr-1-1.png)
 
 <small>图1-1 单 master 的 commit</small>
 
-</center>
+:::
 
 多次提交则会有多个 commit 节点
 
-<center>
+::: center
 
 ![pr-1-2](/images/git/pr-1-2.png)
 
 <small>图1-2 单 master 多次 commit</small>
 
-</center>
+:::
 
 在大型项目的多人开发合作中，如果只有一个 public 下的 master 分支，对于代码库来说非常危险，极其容易因为错误删除某些重要文件、文件夹导致仓库崩溃。
 
@@ -76,13 +76,13 @@ int main(int argc, char *argv[])
 
 提交节点图如下：
 
-<center>
+::: center
 
 ![pr-2-1](/images/git/pr-2-1.png)
 
 <small>图2-1 新建分支 test1</small>
 
-</center>
+:::
 
 ### 2.2 分支合并
 
@@ -95,13 +95,13 @@ git merge test1     # 合并
 
 节点图如下，此时 **master** 节点与 **test1** 节点重合，完成合并，但无法直接看出分支间的相互关系。
 
-<center>
+::: center
 
 ![pr-2-2](/images/git/pr-2-2.png)
 
 <small>图2-2 test1 合并至 master</small>
 
-</center>
+:::
 
 除此之外，merge 也无法实现代码审查的功能，若某分支删除了某些重要内容，并且该分支在时间线上领先于主分支，merge 时将会修改 **master** 的内容，与单 **master** 分支一样，很不安全。
 
@@ -119,77 +119,77 @@ git merge test1     # 合并
 
 假设 **test1** 分支领先于 **master** 一次 commit，如下图。
 
-<center>
+::: center
 
 ![pr-3-1](/images/git/pr-3-1.png)
 
 <small>图3-1 test1 领先 master</small>
 
-</center>
+:::
 
 若需要合并至 **master** 则需要<font color="red">发起 Pull Request（合并请求，简称PR）</font>。具体流程如下：
 
 1. 在仓库界面找到以下内容，并点击创建合并请求
 
-   <center>
+   ::: center
 
    ![pr-3-2a](/images/git/pr-3-2a.png)
 
    <small>图3-2a 合并请求</small>
 
-   </center>
+   :::
 
 2. 选择需要拉取的分支以及合并的分支，点击创建合并请求
 
-   <center>
+   ::: center
 
    ![pr-3-2b](/images/git/pr-3-2b.png)
 
    <small>图3-2b 创建 pr</small>
 
-   </center>
+   :::
 
 3. 输入相关信息，创建Pull Request
 
-   <center>
+   ::: center
 
    ![pr-3-3](/images/git/pr-3-3.png)
 
    <small>图3-3 合并请求的相关信息</small>
 
-   </center>
+   :::
 
 4. 可随时进行评论、等待评审人评审代码，部分代码托管平台具备 `WIP` 的标识，表示正在工作中，合并前需删除 `WIP`。<font color="red">此处需要留意能否自动合并，不能则需要解决冲突</font>。
 
-   <center>
+   ::: center
 
    ![pr-3-4](/images/git/pr-3-4.png)
 
    <small>图3-4 删除 WIP（部分平台）</small>
 
-   </center>
+   :::
 
 5. 评审代码：
 
-   <center>
+   ::: center
 
    ![pr-3-5](/images/git/pr-3-5.png)
 
    <small>图3-5 评审代码</small>
 
-   </center>
+   :::
 
    可以发布评论、<font color="green">通过</font>、<font color="red">请求变更</font>。通过后会显示批准合并
 
 6. 发布合并信息，最终确认合并
 
-   <center>
+   ::: center
 
    ![pr-3-7](/images/git/pr-3-7.png)
 
    <small>图3-7 确认合并</small>
 
-   </center>
+   :::
 
 7. 显示以下内容则说明成功合并，下方弹出的<font color="purple">删除分支 **test1**</font> 可斟酌考虑是否删除（一般是要删除的）
 
@@ -231,13 +231,13 @@ int main(int argc, char *argv[])
 
 Git Graph 显示如下
 
-<center>
+::: center
 
 ![pr-3-8](/images/git/pr-3-8.png)
 
 <small>图3-8 不同于 **master** 的两个分支 **test1**、**test2**</small>
 
-</center>
+:::
 
 假设按照次序，先合并分支 **test1** 至 **master**。此时若再次合并 test2，则会有合并冲突
 
@@ -247,13 +247,13 @@ Git Graph 显示如下
 
 1. 仿照 [3.2](#_3-2-提交代码基本流程) 的内容发起 Pull Request，提示有合并冲突
 
-   <center>
+   ::: center
 
    ![pr-3-9](/images/git/pr-3-9.png)
 
    <small>图3-9 合并冲突</small>
 
-   </center>
+   :::
 
 2. 切换到 test2 分支，从远程库拉取 master 主分支的代码：
 
@@ -264,13 +264,13 @@ Git Graph 显示如下
 
    终端提示：<font color="red">（自动合并失败，修正冲突然后提交修正的结果。）</font>此时Git Graph显示如下：
 
-   <center>
+   ::: center
 
    ![pr-3-10](/images/git/pr-3-10.png)
 
    <small>图3-10 合并新的 **master**</small>
 
-   </center>
+   :::
 
 3. 解决冲突，并推送至 **origin/test2**
    
@@ -278,23 +278,23 @@ Git Graph 显示如下
    git push origin test2
    ```
 
-   <center>
+   ::: center
 
    ![pr-3-11](/images/git/pr-3-11.png)
 
    <small>图3-11 解决冲突</small>
 
-   </center>
+   :::
 
 4. 此时再看 **origin/master** 分支，提示：<font color="gren">（允许合并请求）</font>
 
-   <center>
+   ::: center
 
    ![pr-3-12](/images/git/pr-3-12.png)
 
    <small>图3-12 允许合并</small>
 
-   </center>
+   :::
 
 5. 合并请求，拉取远程主分支至本地库进行更新：
 
@@ -306,13 +306,13 @@ Git Graph 显示如下
 
    Git Graph 显示如下：
 
-   <center>
+   ::: center
 
    ![pr-3-13](/images/git/pr-3-13.png)
 
    <small>图3-13 合并后的 Git Graph</small>
 
-   </center>
+   :::
 
 #### 3.3.2 变基（rebase）
 
@@ -322,13 +322,13 @@ Git Graph 显示如下
 
 对于 图3-8，先合并 **test1** 分支，有如下结果
 
-<center>
+::: center
 
 ![pr-3-14](/images/git/pr-3-14.png)
 
 <small>图3-14 test1 先合并进 master</small>
 
-</center>
+:::
 
 此时 **test2** 分支的基，为 commit 记录为 `"master"` 的节点，而 **test2** 要合并进的 *master* 已经落后于现在最新的 **master**，因此会产生冲突，一般在开发中，会选择使用变基的方式进行分支的快进，即希望 *test2* 的基从 commit 记录为 `"master"` 的节点，快进到最新的 **origin/master** 节点，为此，我们可以使用以下命令
 
@@ -341,23 +341,23 @@ git rebase origin/master
 
 提示冲突
 
-<center>
+::: center
 
 ![pr-3-15](/images/git/pr-3-15.png)
 
 <small>图3-15 变基冲突</small>
 
-</center>
+:::
 
 在 VS Code 的合并编辑器中解决冲突，并点击:ballot_box_with_check:<font color="blue">继续</font>的按钮。可以得到以下节点图
 
-<center>
+::: center
 
 ![pr-3-16](/images/git/pr-3-16.png)
 
 <small>图3-16 变基解决冲突</small>
 
-</center>
+:::
 
 此时 **origin/test2** 的基还是原先的基，而 **test2** 的基以及更新至了最新的 **origin/master**，因此此时进行 **test2** 的推送操作时，必须进行强制推送
 
@@ -367,23 +367,23 @@ git push origin test2 -f
 
 可以得到以下节点图
 
-<center>
+::: center
 
 ![pr-3-17](/images/git/pr-3-17.png)
 
 <small>图3-17 强制推送 test2</small>
 
-</center>
+:::
 
 继续完成 **test2** 的合并请求，最终节点图如下
 
-<center>
+::: center
 
 ![pr-3-18](/images/git/pr-3-18.png)
 
 <small>图3-18 最终节点图</small>
 
-</center>
+:::
 
 ::: warning
 1. 在每次 Pull Request 请求合并之后都可以在 **master** 分支拉取来自远程端的 **origin/master**，以查看当前最新代码，也可以使用 `git fetch` 命令来更新分支信息，此操作可直接显示远程端的信息；
