(refactor) 完成第11-1期视频录制，更新文档

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -2,12 +2,20 @@
 
 #### 教学视频
 
-::: tip 即将到来 ...
-- 【11】CMake：实战篇——常规复杂项目
-- 【11-2】CMake：实战篇——依赖管理
+::: tip 写在前面
+如果你觉得本教程对你有所帮助，欢迎一键三连，你的支持是我不断更新的动力！
+
+:tada: **即将到来 ...**
+- 【11-2】CMake：实战篇——外部依赖管理
 - 【11-3】CMake：实战篇——交叉编译
 - 【11-4】CMake：实战篇——跨平台
 :::
+
+<CardGrid>
+
+@[bilibili](BV1AcN3e6ELW)
+
+</CardGrid>
 
 ---
 
@@ -837,7 +845,7 @@ set(CMAKE_FIND_ROOT_PATH_MODE_INCLUDE ONLY)
 ### 3.3 分析
 
 - 需要实现一个工具链文件 `toolchain-aarch64.cmake`，用于指定交叉编译的工具链；
-- `EtherCATConfig.cmake` 文件在 `find_package` 的 Config 模式能够直接找到的位置吗，前提是工具链文件中的 `CMAKE_FIND_ROOT_PATH` 设置正确；
+- `EtherCATConfig.cmake` 文件在 `find_package` 的 Config 模式能够直接找到的位置，前提是工具链文件中的 `CMAKE_FIND_ROOT_PATH` 设置正确；
 - 项目除了工具链文件外，只需要一个 `CMakeLists.txt` 文件，并且构建方式和普通项目一样。
 
 ### 3.4 实现
@@ -1049,13 +1057,20 @@ project(
   numopt
   LANGUAGES CXX
 )
+
 set(CMAKE_CXX_STANDARD 17)
+
+option(BUILD_SHARED_LIBS "Build shared libraries?" OFF)
+
 include(cmake/numoptInstall.cmake)
 
 # ----------------------------------------------------------------------------
 #   目标构建
 # ----------------------------------------------------------------------------
+# main target
 add_subdirectory(modules)
+
+# executable target
 add_subdirectory(samples)
 
 # uninstall target
@@ -1192,11 +1207,7 @@ add_subdirectory(opt)
 ```cmake :collapsed-lines
 aux_source_directory(src core_src)
 
-if(BUILD_SHARED_LIBS)
-  add_library(core SHARED ${core_src})
-else()
-  add_library(core STATIC ${core_src})
-endif()
+add_library(core ${core_src})
 
 target_include_directories(core PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -1216,11 +1227,7 @@ install(TARGETS core
 ```cmake :collapsed-lines
 aux_source_directory(src num_src)
 
-if(BUILD_SHARED_LIBS)
-  add_library(num SHARED ${num_src})
-else()
-  add_library(num STATIC ${num_src})
-endif()
+add_library(num ${num_src})
 
 target_include_directories(num PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -1242,11 +1249,7 @@ install(TARGETS num
 ```cmake :collapsed-lines
 aux_source_directory(src opt_src)
 
-if(BUILD_SHARED_LIBS)
-  add_library(opt SHARED ${opt_src})
-else()
-  add_library(opt STATIC ${opt_src})
-endif()
+add_library(opt ${opt_src})
 
 target_include_directories(opt PUBLIC
   $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
@@ -1374,9 +1377,9 @@ endforeach()
 
 ### 4.3 针对 Visual Studio 的特殊设计
 
-对于多个目标的项目，会生成多个库文件，例如本 `numopt` 项目，在 Windows 下会生成 `core.lib`、`num.lib` 和 `opt.lib` 3 个库文件，在 Visual Studio 中，利用这 3 个库文件进行开发，需要再项目中手动添加，这样会增加开发者的工作量。为了简化开发者的工作，可以将这 3 个库文件打包成一个 `numopt.lib` 文件，这样开发者只需要添加一个库文件即可。
+对于多个目标的项目，会生成多个库文件，例如本 `numopt` 项目，在 Windows 下会生成 `core.lib`、`num.lib` 和 `opt.lib` 3 个库文件，在 Visual Studio 中，利用这 3 个库文件进行开发，需要再项目中手动添加，这样会增加开发者的工作量。为了简化开发者的工作，可以将这 3 个库文件打包成一个 `numopt_world.lib` 文件，这样开发者只需要添加一个库文件即可。
 
-例如 OpenCV 原先会生成 `opencv_core.lib`、`opencv_imgproc.lib` 以及 `opencv_highgui.lib` 等库文件，在启用 `BUILD_opencv_world` 选项后，则不再生成原先的库文件，而是生成一个 `opencv_world.lib` 文件。这时开发者只需在 Visual Studio 项目配置中添加 `opencv_world.lib` 的路径和名字即可。
+例如 OpenCV 原先会生成 `opencv_core.lib`、`opencv_imgproc.lib` 以及 `opencv_highgui.lib` 等导入库文件，在启用 `BUILD_opencv_world` 选项后，则不再生成原先的库文件，而是生成一个 `opencv_world.lib` 导入库文件。这时开发者在使用 Visual Studio 对项目的导入库进行配置的时候，只需添加 `opencv_world.lib` 该导入库文件的路径和名字即可。
 
 一个简单的实现方式是在 `core`、`num` 和 `opt` 模块的 `CMakeLists.txt` 文件中添加判断，下面以 `core` 模块为例：
 
@@ -1409,12 +1412,8 @@ add_subdirectory(modules)
 add_subdirectory(samples)
 
 if(BUILD_WORLD)
-  if(BUILD_SHARED_LIBS)
-    add_library(numopt SHARED ${NUMOPT_SRC})
-  else()
-    add_library(numopt STATIC ${NUMOPT_SRC})
-  endif()
-  target_include_directories(numopt PUBLIC
+  add_library(numopt_world ${NUMOPT_SRC})
+  target_include_directories(numopt_world PUBLIC
     $<BUILD_INTERFACE:${NUMOPT_INC}>
     $<INSTALL_INTERFACE:${NUMOPT_INC_INSTALL_PATH}>
   )
@@ -1431,7 +1430,7 @@ add_library(core_obj OBJECT ${core_src})
 
 开发者可以自行增加 `if` 判断，根据自己的需求来选择合适的实现方式。
 
-使用形如
+使用形如以下的代码来安装：
 
 ::: code-tabs
 
@@ -1467,7 +1466,7 @@ install(TARGETS opt_obj
 
 :::
 
-来安装对象库等效于安装一个接口库，安装接口库的效果可以参考[【10】项目的导出与安装 - 思考](10.md#思考)中的第 2 个问题，因此在导出配置文件中也具有相应的信息，例如 `numoptModules.cmake` 导出配置文件中会包含大致如下内容
+不过，对象库等效于安装一个接口库，安装接口库的效果可以参考[【10】项目的导出与安装 - 思考](10.md#思考)中的第 2 个问题，因此在导出配置文件中也具有相应的信息，例如 `numoptModules.cmake` 导出配置文件中会包含大致如下内容
 
 ```cmake
 # Create imported target core_obj
@@ -1486,13 +1485,14 @@ add_library(opt_obj INTERFACE IMPORTED)
 
 ## 写在后面
 
-有关 CMake 项目实战的内容可以参考 [RMVL](https://github.com/cv-rmvl/rmvl.git) 项目的 CMake 框架，本文涉及到的
+有关 CMake 项目实战的内容可以参考 [RMVL](https://github.com/cv-rmvl/rmvl.git)[^2] 项目的 CMake 框架，本文涉及到的
 
-- 常规非跨平复杂项目
-- 外部依赖
-- 交叉编译
-- 跨平台
+- 常规目标构建的内容
+- 外部依赖管理的内容
+- 交叉编译的内容
+- 跨平台的内容
 
 对应的 CMake 配置，都能在 RMVL 项目中找到。
 
 [^1]: open62541 developers. [open62541](https://github.com/open62541/open62541.git), September 2014.
+[^2]: zhaoxi and other RMVL developers. [rmvl](https://github.com/cv-rmvl/rmvl.git), September 2023.
