(bugfix) 修改第 8 期 CMake 5.3.1 中 list 的错误写法

--- a/docs/tutorial/cmake/08.md
+++ b/docs/tutorial/cmake/08.md
@@ -257,7 +257,7 @@ find_package(<package> [VERSION] [EXACT] [QUIET] [MODULE]
 cmake_minimum_required(VERSION 3.10)
 project(CameraDemo)
 # 本篇 2.2.2 节提及过，下一句是让 CMake 工程能够找到 FindCamera.cmake
-list(CMAKE_MODULE_PATH APPEND "${CMAKE_SOURCE_DIR}/cmake")
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
 
 # 找到 SDK
 find_package(Camera)
