(feat) tutorial: 补充 FetchContent 的 CMake 文档

--- a/docs/tutorial/cmake/11.md
+++ b/docs/tutorial/cmake/11.md
@@ -579,6 +579,48 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(projD projB projC)
 ```
 
+#### 2.1.4 `FetchContent` 对导出配置文件的影响
+
+使用 `FetchContent_MakeAvailable` 会影响到导出配置文件的生成，不使用 `FetchContent` 模块时，项目生成的导出配置文件在末尾会包含以下内容以及注释
+
+::: code-tabs
+
+@tab English
+
+```cmake
+# This file does not depend on other imported targets which have
+# been exported from the same project but in a separate export set.
+```
+
+@tab 中文
+
+```cmake
+# 该文件不依赖于从同一项目导出的但是在单独导出集中导出的其他导入目标。
+```
+
+:::
+
+而使用 `FetchContent` 模块时，项目生成的导出配置文件会包含以下内容以及注释
+
+::: code-tabs
+
+@tab English
+
+```cmake
+# Make sure the targets which have been exported in some other
+# export set exist.
+```
+
+@tab 中文
+
+```cmake
+# 确保在其他导出集中导出的目标存在。
+```
+
+:::
+
+这需要用户在 `XxxConfig.cmake` 文件中添加本项目的导出配置文件之前，==先添加外部依赖的导出配置文件==，否则会出现导入错误。
+
 ### 2.2 预期目标
 
 现计划开发一个 Windows 平台下的 OPC UA 通信库 `opcua`，该库依赖于 `open62541`[^1]，`open62541` 是一个开源的 OPC UA 协议栈，提供了 OPC UA 服务端和客户端的 C 语言实现。`opcua` 库的开发需要实现以下功能：
@@ -603,18 +645,18 @@ FetchContent_MakeAvailable(projD projB projC)
 ``` :collapsed-lines
 .
 ├── include
-│   ├── opcua
-│   │   ├── client.hpp
-│   │   ├── event.hpp
-│   │   ├── method.hpp
-│   │   ├── object.hpp
-│   │   ├── publisher.hpp
-│   │   ├── server.hpp
-│   │   ├── subscriber.hpp
-│   │   ├── utilities.hpp
-│   │   ├── variable.hpp
-│   │   └── view.hpp
-│   └── opcua.hpp
+│   ├── opcua
+│   │   ├── client.hpp
+│   │   ├── event.hpp
+│   │   ├── method.hpp
+│   │   ├── object.hpp
+│   │   ├── publisher.hpp
+│   │   ├── server.hpp
+│   │   ├── subscriber.hpp
+│   │   ├── utilities.hpp
+│   │   ├── variable.hpp
+│   │   └── view.hpp
+│   └── opcua.hpp
 └── src
     ├── client.cpp
     ├── cvt.hpp
@@ -751,7 +793,7 @@ FetchContent_MakeAvailable(open62541)
 
 :::
 
-#### 2.4.4 opcuaConfig.cmake 配置
+#### 2.4.3 opcuaConfig.cmake 配置
 
 由于 `opcua` 项目只有一个目标，因此 `opcuaConfig.cmake` 文件非常简单，方便起见也不需要向用户提供诸如 `opcua_INCLUDE_DIRS` 和 `opcua_LIBS` 这样的集合变量，因此 `opcuaConfig.cmake` 只需要完成以下功能即可
 
@@ -771,6 +813,14 @@ FetchContent_MakeAvailable(open62541)
 #    target_link_libraries(your_target PRIVATE opcua)
 # ----------------------------------------------------------------------------
 
+set(OPCUA_INSTALL_PATH "D:/opcua")
+
+# 3rdparty
+if(NOT TARGET open62541::open62541)
+  include("${OPCUA_INSTALL_PATH}/lib/cmake/open62541/open62541Config.cmake")
+endif()
+
+# Export target
 if(NOT TARGET opcua)
   include(${CMAKE_CURRENT_LIST_DIR}/opcuaTarget.cmake)
 endif()
